# parsedep

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  test.go
